pages/index.css
body
{
	/*background-color: #111;*/
	cursor: default;
	-webkit-user-select: none;
}

.topBox
{
	display: flex;
	justify-content: center;
	align-items: center;
	width: 100%;
	left: 0;
	height: 50;
	-webkit-app-region: drag;
}

.topBox h1
{
	text-align: center;
	font-family: "Futura", sans-serif;
	color: #fff;
}

#clocks
{
	top: 0px;
	margin-top: 0px;
	padding-top: 65px;
	padding-bottom: 50px;
}

#clocks div
{
	display: flex;
	align-items: center;
	padding: 5px;
}

#clocks div *
{
	margin: 5px;
}

#bottomGroup
{
	position: fixed;
	bottom: 0;
	left: 0;
	width: 100%;
}

